<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp"/>

    <TextView
        android:id="@+id/notification_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Notification"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <TextView
        android:id="@+id/degree_view"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="degree: -, speed: -, direction: -"
        app:layout_constraintTop_toBottomOf="@+id/notification_view"
        app:layout_constraintStart_toStartOf="@id/left_guideline"/>

    <View
        android:id="@+id/seperator_v"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/degree_view"
        android:background="@color/control_background"/>

    <TextView
        android:id="@+id/rotation_test_tv"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/seperator_v"
        android:text="rotation speed options" />

    <Button
        android:id="@+id/btn_left_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/rotation_test_tv" />

    <EditText
        android:id="@+id/rotation_angle_view"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btn_right_turn"
        app:layout_constraintStart_toEndOf="@+id/btn_left_turn"
        app:layout_constraintBottom_toBottomOf="@+id/btn_left_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_left_turn"/>

    <Button
        android:id="@+id/btn_right_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/btn_left_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_left_turn"
        />

    <Button
        android:id="@+id/btn_left_con_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lleft"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_left_turn" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_left_con_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_left_con_turn"
        app:layout_constraintEnd_toStartOf="@+id/btn_right_con_turn"
        app:layout_constraintStart_toEndOf="@+id/btn_left_con_turn" />

    <Button
        android:id="@+id/btn_right_con_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rright"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/btn_left_con_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_left_con_turn"
        />

    <Spinner
        android:id="@+id/speed_list_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/save_speed_view"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/save_speed_view"
        app:layout_constraintBottom_toBottomOf="@+id/save_speed_view"/>

    <TextView
        android:id="@+id/save_speed_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Change speed"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="Speed list"
        app:layout_constraintBottom_toTopOf="@+id/speed_list_view"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <View
        android:id="@+id/seperator2_v"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/save_speed_view"
        android:background="@color/control_background"/>

    <TextView
        android:id="@+id/remote_test_tv"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/seperator2_v"
        android:text="remote preset speeds" />

    <Button
        android:id="@+id/btn_remote_left_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/remote_test_tv"
        android:text="@string/left" />

    <EditText
        android:id="@+id/remote_angle_view"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btn_remote_right_turn"
        app:layout_constraintStart_toEndOf="@+id/btn_remote_left_turn"
        app:layout_constraintBottom_toBottomOf="@+id/btn_remote_left_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_remote_left_turn"/>

    <Button
        android:id="@+id/btn_remote_right_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_remote_left_turn"
        app:layout_constraintTop_toTopOf="@+id/btn_remote_left_turn"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        android:text="@string/right" />

    <Spinner
        android:id="@+id/remote_speed_list_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/remote_save_speed_view"
        app:layout_constraintTop_toBottomOf="@+id/remote_textView"
        app:layout_constraintTop_toTopOf="@+id/remote_save_speed_view"
        app:layout_constraintBottom_toBottomOf="@+id/remote_save_speed_view"/>

    <TextView
        android:id="@+id/remote_save_speed_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Change speed"
        app:layout_constraintTop_toBottomOf="@+id/btn_remote_left_turn"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <TextView
        android:id="@+id/remote_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Speed list"
        app:layout_constraintBottom_toTopOf="@+id/remote_speed_list_view"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_remote_left_turn" />

    <View
        android:id="@+id/seperator3_v"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/remote_speed_list_view"
        android:background="@color/control_background"/>

    <Button
        android:id="@+id/btn_change_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:text="Change Pivo Name"
        app:layout_constraintEnd_toStartOf="@+id/input_pivo_name"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/seperator3_v"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/input_pivo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/btn_change_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/btn_change_name"
        app:layout_constraintTop_toTopOf="@+id/btn_change_name" />

    <TextView
        android:id="@+id/version_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <Button
        android:id="@+id/btn_camera1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/input_pivo_name" />

    <Button
        android:id="@+id/btn_camera2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera2"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera1" />

    <Button
        android:id="@+id/btn_enbale_bypass"
        android:text="@string/enable_bypass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera2"/>

</androidx.constraintlayout.widget.ConstraintLayout>